@@ -190,9 +190,12 @@ handle_row_activation_cb (GtkTreeView *treeview, GtkTreePath *path,
 
     window->curlog->current_line_no = row;
 
-    gtk_check_menu_item_set_active (GTK_CHECK_MENU_ITEM
-				    (gtk_ui_manager_get_widget (window->ui_manager, "/LogviewMenu/ViewMenu/ShowDetails")),
-				    TRUE);
+    if (window->zoom_visible)
+	    repaint_zoom (window);
+    else
+	    gtk_check_menu_item_set_active (GTK_CHECK_MENU_ITEM
+					    (gtk_ui_manager_get_widget (window->ui_manager, "/LogviewMenu/ViewMenu/ShowDetails")),
+					    TRUE);
 }
 
 /* ----------------------------------------------------------------------
