@@ -34,13 +34,29 @@
 extern char *month[12];
 extern GList *regexp_db, *descript_db;
 
-static void quit_zoom_view (GtkWidget *widget, gpointer data);
-
 void
+close_zoom_view (LogviewWindow *window)
+{
+   if (window->zoom_visible) {
+      gtk_widget_hide (GTK_WIDGET (window->zoom_dialog));
+      gtk_check_menu_item_set_active (GTK_CHECK_MENU_ITEM
+				      (gtk_ui_manager_get_widget 
+				       (window->ui_manager, "/LogviewMenu/ViewMenu/ShowDetails")),
+				      FALSE);
+      window->zoom_visible = FALSE;
+   }
+}
+
+static void
 zoom_close_button (GtkWidget *zoom_dialog, int arg, gpointer data)
 {
-	LogviewWindow *window = data;
-	close_zoom_view (window);
+	close_zoom_view (data);
+}
+
+static void
+quit_zoom_view (GtkWidget *zoom_dialog, gpointer data)
+{
+	close_zoom_view (data);
 }
 
 /* ----------------------------------------------------------------------
@@ -51,7 +67,6 @@ zoom_close_button (GtkWidget *zoom_dialog, int arg, gpointer data)
 void
 create_zoom_view (LogviewWindow *window)
 {
-
    if (window->curlog == NULL || window->zoom_visible)
       return;
 
@@ -72,14 +87,14 @@ create_zoom_view (LogviewWindow *window)
 		          G_CALLBACK (gtk_true),
 			  NULL);
 	gtk_dialog_set_has_separator (GTK_DIALOG (zoom_dialog), FALSE);
-	gtk_window_set_default_size (GTK_WINDOW (zoom_dialog), 500, 225);
+	gtk_window_set_resizable (GTK_WINDOW (zoom_dialog), FALSE);
 	gtk_dialog_set_default_response (GTK_DIALOG (zoom_dialog), GTK_RESPONSE_CLOSE);
    	gtk_container_set_border_width (GTK_CONTAINER (zoom_dialog), 5);
 	window->zoom_dialog = zoom_dialog;
    }
 
    repaint_zoom(window);
-   gtk_widget_show (window->zoom_dialog);
+   gtk_window_present (GTK_WINDOW (window->zoom_dialog));
    window->zoom_visible = TRUE; 
 }
 
@@ -91,166 +106,61 @@ create_zoom_view (LogviewWindow *window)
 int
 repaint_zoom (LogviewWindow *window)
 {
-   static GtkWidget *zoom_tree;
-   static GtkCellRenderer *renderer;
-   static GtkTreeViewColumn *column1, *column2;
-   const gchar *titles[] = { N_("Date:"), N_("Process:"),
-                N_("Message:"), N_("Description:"), NULL }; 
-   GtkTreeIter iter;
    LogLine *line;
    struct tm date = {0};
    char buffer[1024];
-   char *utf8;
-   gint i;
    GtkWidget *zoom_dialog = window->zoom_dialog;
+   gchar *date_string, *description=NULL, *label_text;
 
    g_return_if_fail (window->curlog);
-
-   if (window->zoom_scrolled_window == NULL) {
-	   GtkWidget *scrolled_window;
-	   GtkListStore *store;
    
-	   scrolled_window = gtk_scrolled_window_new (NULL, NULL);
-	   gtk_widget_set_sensitive (scrolled_window, TRUE);
-	   gtk_container_set_border_width (GTK_CONTAINER (scrolled_window), 5);
-	   gtk_scrolled_window_set_policy (GTK_SCROLLED_WINDOW (scrolled_window),
-					   GTK_POLICY_AUTOMATIC,
-					   GTK_POLICY_AUTOMATIC);
-
-	   store = gtk_list_store_new (2, G_TYPE_STRING, G_TYPE_STRING);
-	   zoom_tree = gtk_tree_view_new_with_model (GTK_TREE_MODEL (store));
-	   gtk_tree_view_set_rules_hint (GTK_TREE_VIEW (zoom_tree), TRUE); 
-
-	   gtk_container_add (GTK_CONTAINER (scrolled_window), zoom_tree);
-
-	   /* Create Columns */
-	   renderer = gtk_cell_renderer_text_new ();
-	   column1 = gtk_tree_view_column_new_with_attributes (_("Log Line Details"),
-							       renderer, "text", 0, NULL);
-	   gtk_tree_view_column_set_sizing (column1, GTK_TREE_VIEW_COLUMN_AUTOSIZE);
-	   gtk_tree_view_column_set_resizable (column1, TRUE); 
-	   gtk_tree_view_append_column (GTK_TREE_VIEW (zoom_tree), column1);
-	   gtk_tree_view_column_set_spacing (column1, 12);
-  
-	   renderer = gtk_cell_renderer_text_new ();
-	   column2 = gtk_tree_view_column_new_with_attributes ("", renderer,
-							       "text", 1, NULL);
-	   gtk_tree_view_column_set_sizing (column2, GTK_TREE_VIEW_COLUMN_AUTOSIZE);
-	   gtk_tree_view_column_set_resizable (column2, TRUE); 
-	   gtk_tree_view_append_column (GTK_TREE_VIEW (zoom_tree), column2);
-	   gtk_tree_view_column_set_spacing (column2, 12);
-
-	   /* Add entries to the list */
-	   for (i = 0; titles[i]; ++i) {
-		   gtk_list_store_append (GTK_LIST_STORE (store), &iter);
-		   gtk_list_store_set (GTK_LIST_STORE (store), &iter, 0, _(titles[i]), -1);
-	   }
-	   
-	   window->zoom_scrolled_window = scrolled_window;
-	   window->zoom_store = store;
+   if (window->zoom_label == NULL) {
+	   window->zoom_label = gtk_label_new (NULL);
+	   gtk_label_set_selectable (GTK_LABEL (window->zoom_label), TRUE);
 	   gtk_box_pack_start (GTK_BOX (GTK_DIALOG (window->zoom_dialog)->vbox),
-			       scrolled_window, TRUE, TRUE, 0);
+			       window->zoom_label, TRUE, TRUE, 0);
+	   gtk_widget_show (window->zoom_label);
    }
 
-   if (window->curlog != NULL)
-       g_snprintf (buffer, sizeof (buffer), "%s", window->curlog->name);
-   else
-       g_snprintf (buffer, sizeof (buffer), _("<No log loaded>"));
-   gtk_tree_view_column_set_title (column2, buffer);
-
-   gtk_widget_show_all (window->zoom_scrolled_window);
-
-   /* Check that there is at least one log */
-   if (window->curlog == NULL) {
-       gtk_list_store_clear (GTK_LIST_STORE (window->zoom_store));
-       /* Add entries to the list */
-       for (i = 0; titles[i]; ++i) {
-           gtk_list_store_append (GTK_LIST_STORE (window->zoom_store), &iter);
-           gtk_list_store_set (GTK_LIST_STORE (window->zoom_store), &iter, 0, _(titles[i]), -1);
-       }
-       return FALSE;
+   if (window->curlog->current_line_no <= 0 || 
+       ((line = (window->curlog->lines)[window->curlog->current_line_no]) == NULL)) {
+	   return FALSE;
    }
-  
-   if (gtk_tree_model_get_iter_root (GTK_TREE_MODEL (window->zoom_store), &iter)) {
 
-       if (window->curlog->current_line_no <= 0 || 
-           ((line = (window->curlog->lines)[window->curlog->current_line_no]) == NULL)) {
-	       return FALSE;
-       }
-
-       date.tm_mon = line->month;
-       date.tm_year = 70 /* bogus */;
-       date.tm_mday = line->date;
-       date.tm_hour = line->hour;
-       date.tm_min = line->min;
-       date.tm_sec = line->sec;
-       date.tm_isdst = 0;
-
-       /* Translators: do not include year, it would be bogus */
-       if (strftime (buffer, sizeof (buffer), _("%B %e %X"), &date) <= 0) {
+   date.tm_mon = line->month;
+   date.tm_year = 70 /* bogus */;
+   date.tm_mday = line->date;
+   date.tm_hour = line->hour;
+   date.tm_min = line->min;
+   date.tm_sec = line->sec;
+   date.tm_isdst = 0;
+   
+   /* Translators: do not include year, it would be bogus */
+   if (strftime (buffer, sizeof (buffer), _("%B %e %X"), &date) <= 0) {
            /* as a backup print in US style */
-           utf8 = g_strdup_printf ("%s %d %02d:%02d:%02d",
-                       _(month[(int)line->month]),
-                       (int) line->date,
-                       (int) line->hour,
-                       (int) line->min,
-                       (int) line->sec);
-       } else {
-           utf8 = LocaleToUTF8 (buffer);
-       }
+           date_string = g_strdup_printf ("%s %d %02d:%02d:%02d",
+					  _(month[(int)line->month]),
+					  (int) line->date,
+					  (int) line->hour,
+					  (int) line->min,
+					  (int) line->sec);
+   } else
+           date_string = LocaleToUTF8 (buffer);
+   
+   if (match_line_in_db (line, regexp_db))
+	   if (find_tag_in_db (line, descript_db))
+		   description = LocaleToUTF8 (line->description->description);
+   
+   label_text = g_strdup_printf ("<b>Date</b> : %s\n"
+				 "<b>Process</b> : %s\n"
+				 "<b>Message</b> : %s\n"
+				 "<b>Description</b> : %s\n",
+				 date_string, LocaleToUTF8 (line->process),
+				 LocaleToUTF8 (line->message),
+				 description);
 
-       gtk_list_store_set (GTK_LIST_STORE (window->zoom_store), &iter, 1, utf8, -1);
-       g_free (utf8);
-
-       gtk_tree_model_iter_next (GTK_TREE_MODEL (window->zoom_store), &iter);
-       utf8 = LocaleToUTF8 (line->process);
-       gtk_list_store_set (GTK_LIST_STORE (window->zoom_store), &iter, 1, utf8, -1);
-       g_free (utf8);
-
-       gtk_tree_model_iter_next (GTK_TREE_MODEL (window->zoom_store), &iter);
-       utf8 = LocaleToUTF8 (line->message);
-       gtk_list_store_set (GTK_LIST_STORE (window->zoom_store), &iter, 1, utf8, -1);
-       g_free (utf8);
-
-       gtk_tree_model_iter_next (GTK_TREE_MODEL (window->zoom_store), &iter);
-       if (match_line_in_db (line, regexp_db))
-           if (find_tag_in_db (line, descript_db)) {
-               utf8 = LocaleToUTF8 (line->description->description);
-               gtk_list_store_set (GTK_LIST_STORE (window->zoom_store), &iter, 1, utf8, -1);
-               g_free (utf8);
-       }
-               
-   }
+   gtk_label_set_text (GTK_LABEL(window->zoom_label), label_text);
+   gtk_label_set_use_markup (GTK_LABEL (window->zoom_label), TRUE);
 
    return TRUE;
-
 }
-
-/* ----------------------------------------------------------------------
-   NAME:          close zoom view
-   DESCRIPTION:   Callback called when the log info window is closed.
-   ---------------------------------------------------------------------- */
-
-void
-close_zoom_view (LogviewWindow *window)
-{
-   if (window->zoom_visible) {
-      gtk_widget_hide (GTK_WIDGET (window->zoom_dialog));
-      gtk_check_menu_item_set_active (GTK_CHECK_MENU_ITEM
-				      (gtk_ui_manager_get_widget 
-				       (window->ui_manager, "/LogviewMenu/ViewMenu/ShowDetails")),
-				      FALSE);
-      window->zoom_dialog = NULL;
-      window->zoom_scrolled_window = NULL;
-      window->zoom_visible = FALSE;
-   }
-}
-
-void
-quit_zoom_view (GtkWidget *zoom_dialog, gpointer data) {
-	LogviewWindow *window = data;
-	window->zoom_dialog = NULL;
-	window->zoom_scrolled_window = NULL;
-	window->zoom_visible = FALSE;
-}
-
