@@ -1,5 +1,7 @@
 2004-11-18  Vincent Noel  <vnoel@cox.net>
 
+	* zoom.c: Simplify a lot. Use labels and markup in zoom dialog.
+
 	* info.c (LogInfo): Simplify a lot. Use markup in properties dialog.
 	(LogInfo): Make the label text selectable.
 
